prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_const_inline.nut
// EXPECTED: compile-time error - const string assigned to int variable
const MY_STR = "hello"
local x: int = MY_STR
return x
